--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,3 +86,15 @@
     @apply bg-background text-foreground;
   }
 }
+
+.wallet-adapter-button{
+  width: 100%;
+  padding: 0 16px !important;
+  border-radius: 8px !important;
+}
+.wallet-adapter-button.wallet-adapter-button-trigger{
+  background-color: #18181B !important;
+}
+.wallet-adapter-button.wallet-adapter-button-trigger:hover{
+  background-color: hsl(var(--primary) / 0.9) !important;
+}
